优化商品页侧边栏样式，商品全选，商品详情页可以修改商品信息。2. 订单页样式优化，详情的商品列表按表格显示。下拉刷新。3. 设置网络超市时间和处理

--- a/project.config.json
+++ b/project.config.json
@@ -8,6 +8,7 @@
 		"es6": true,
 		"enhance": true,
 		"postcss": true,
+		"preloadBackgroundData": false,
 		"minified": true,
 		"newFeature": true,
 		"coverView": true,
@@ -17,17 +18,18 @@
 		"checkInvalidKey": true,
 		"checkSiteMap": true,
 		"uploadWithSourceMap": true,
+		"compileHotReLoad": false,
 		"babelSetting": {
 			"ignore": [],
 			"disablePlugins": [],
 			"outputPath": ""
 		},
-		"preloadBackgroundData": false,
+		"useIsolateContext": true,
 		"useCompilerModule": false,
 		"userConfirmedUseCompilerModuleSwitch": false
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.11.3",
+	"libVersion": "2.10.4",
 	"appid": "wx214f112d62d0a7cc",
 	"projectname": "wxapp",
 	"debugOptions": {
