--- a/app.json
+++ b/app.json
@@ -18,7 +18,9 @@
     "pages/driverTransStatu/driverTransStatu",
     "pages/scanCodePay/scanCodePay",
     "pages/booth/booth",
-    "pages/paymentRes/paymentRes"
+    "pages/paymentRes/paymentRes",
+    "pages/goodSearch/goodSearch",
+    "pages/goodS/goodS"
   ],
   "window": {
     "backgroundTextStyle": "light",
