--- a/app.json
+++ b/app.json
@@ -22,6 +22,11 @@
     "pages/goodSearch/goodSearch",
     "pages/goodS/goodS"
   ],
+  "permission": {
+    "scope.userLocation": {
+      "desc": "你的位置信息将用于小程序位置接口的效果展示"
+    }
+  },
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
