完整测试版，还未删除没有用的文件

--- a/app.json
+++ b/app.json
@@ -20,7 +20,8 @@
     "pages/booth/booth",
     "pages/paymentRes/paymentRes",
     "pages/goodSearch/goodSearch",
-    "pages/goodS/goodS"
+    "pages/goodS/goodS",
+    "pages/addPrint/addPrint"
   ],
   "permission": {
     "scope.userLocation": {
