--- a/project.config.json
+++ b/project.config.json
@@ -117,6 +117,19 @@
 					"pathName": "pages/addPrint/addPrint",
 					"query": "",
 					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/driverMap/driverMap",
+					"pathName": "pages/driverMap/driverMap",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/recharge/recharge",
+					"pathName": "pages/recharge/recharge",
+					"scene": null
 				}
 			]
 		}
