1. 添加页面: 注册须知页(readyRegister)   注册提交页(bossRegister)

--- a/app.json
+++ b/app.json
@@ -23,7 +23,9 @@
     "pages/addPrint/addPrint",
     "pages/driverMap/driverMap",
     "pages/recharge/recharge",
-    "pages/rechargeDetail/rechargeDetail"
+    "pages/rechargeDetail/rechargeDetail",
+    "pages/bossRegister/bossRegister",
+    "pages/bossRegister/readyRegister/readyRegister"
   ],
   "permission": {
     "scope.userLocation": {
