1. 添加充值页面  2. 优化表格 隔行换色

--- a/app.json
+++ b/app.json
@@ -25,7 +25,8 @@
     "pages/recharge/recharge",
     "pages/rechargeDetail/rechargeDetail",
     "pages/bossRegister/bossRegister",
-    "pages/bossRegister/readyRegister/readyRegister"
+    "pages/bossRegister/readyRegister/readyRegister",
+    "pages/rechargePay/rechargePay"
   ],
   "permission": {
     "scope.userLocation": {
