--- a/project.config.json
+++ b/project.config.json
@@ -32,7 +32,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.12.2",
-	"appid": "wx56422cd818402e49",
+	"appid": "wx214f112d62d0a7cc",
 	"projectname": "wxapp",
 	"debugOptions": {
 		"hidedInDevtools": []
