--- a/project.config.json
+++ b/project.config.json
@@ -1,188 +1,186 @@
 {
-	"description": "项目配置文件",
-	"packOptions": {
-		"ignore": []
-	},
-	"setting": {
-		"urlCheck": false,
-		"es6": true,
-		"enhance": false,
-		"postcss": false,
-		"preloadBackgroundData": false,
-		"minified": false,
-		"newFeature": true,
-		"coverView": true,
-		"nodeModules": false,
-		"autoAudits": false,
-		"showShadowRootInWxmlPanel": false,
-		"scopeDataCheck": false,
-		"uglifyFileName": false,
-		"checkInvalidKey": true,
-		"checkSiteMap": true,
-		"uploadWithSourceMap": true,
-		"compileHotReLoad": false,
-		"babelSetting": {
-			"ignore": [],
-			"disablePlugins": [],
-			"outputPath": ""
-		},
-		"useIsolateContext": true,
-		"useCompilerModule": false,
-		"userConfirmedUseCompilerModuleSwitch": true
-	},
-	"compileType": "miniprogram",
-	"libVersion": "2.12.2",
-	"appid": "wx56422cd818402e49",
-	"projectname": "wxapp",
-	"debugOptions": {
-		"hidedInDevtools": []
-	},
-	"isGameTourist": false,
-	"simulatorType": "wechat",
-	"simulatorPluginLibVersion": {},
-	"condition": {
-		"search": {
-			"current": -1,
-			"list": []
-		},
-		"conversation": {
-			"current": -1,
-			"list": []
-		},
-		"plugin": {
-			"current": -1,
-			"list": []
-		},
-		"game": {
-			"currentL": -1,
-			"list": []
-		},
-		"gamePlugin": {
-			"current": -1,
-			"list": []
-		},
-		"miniprogram": {
-			"current": -1,
-			"list": [
-				{
-					"id": -1,
-					"name": "pages/accountStatement/accountStatement",
-					"pathName": "pages/accountStatement/accountStatement",
-					"query": "",
-					"scene": null
-				},
-				{
-					"id": -1,
-					"name": "goodSearch",
-					"pathName": "pages/goodSearch/goodSearch",
-					"query": "",
-					"scene": null
-				},
-				{
-					"id": 2,
-					"name": "S",
-					"pathName": "pages/goodS/goodS",
-					"query": "",
-					"scene": null
-				},
-				{
-					"id": -1,
-					"name": "paymentRes",
-					"pathName": "pages/paymentRes/paymentRes",
-					"query": "",
-					"scene": null
-				},
-				{
-					"id": -1,
-					"name": "pages/goodSearch/goodSearch",
-					"pathName": "pages/goodSearch/goodSearch",
-					"query": "",
-					"scene": null
-				},
-				{
-					"id": -1,
-					"name": "pages/orderStatu/orderStatu",
-					"pathName": "pages/orderStatu/orderStatu",
-					"query": "",
-					"scene": null
-				},
-				{
-					"id": -1,
-					"name": "orderDetail",
-					"pathName": "pages/orderDetail/orderDetail",
-					"query": "",
-					"scene": null
-				},
-				{
-					"id": -1,
-					"name": "addPrint",
-					"pathName": "pages/addPrint/addPrint",
-					"query": "",
-					"scene": null
-				},
-				{
-					"id": -1,
-					"name": "pages/driverMap/driverMap",
-					"pathName": "pages/driverMap/driverMap",
-					"query": "",
-					"scene": null
-				},
-				{
-					"id": -1,
-					"name": "pages/recharge/recharge",
-					"pathName": "pages/recharge/recharge",
-					"query": "",
-					"scene": null
-				},
-				{
-					"id": -1,
-					"name": "pages/recharge/recharge",
-					"pathName": "pages/recharge/recharge",
-					"query": "",
-					"scene": null
-				},
-				{
-					"id": -1,
-					"name": "pages/login/login",
-					"pathName": "pages/rechargeDetail/rechargeDetail",
-					"query": "",
-					"scene": null
-				},
-				{
-					"id": -1,
-					"name": "pages/login/login",
-					"pathName": "pages/index/index",
-					"query": "",
-					"scene": null
-				},
-				{
-					"id": -1,
-					"name": "addPrint",
-					"pathName": "pages/addPrint/addPrint",
-					"query": "",
-					"scene": null
-				},
-				{
-					"id": -1,
-					"name": "pages/rechargeDetail/rechargeDetail",
-					"pathName": "pages/rechargeDetail/rechargeDetail",
-					"query": "",
-					"scene": null
-				},
-				{
-					"id": 15,
-					"name": "pages/bossRegister/readyRegister/readyRegister",
-					"pathName": "pages/bossRegister/readyRegister/readyRegister",
-					"query": "",
-					"scene": null
-				},
-				{
-					"id": -1,
-					"name": "pages/rechargePay/rechargePay",
-					"pathName": "pages/rechargePay/rechargePay",
-					"scene": null
-				}
-			]
-		}
-	}
+  "description": "项目配置文件",
+  "packOptions": {
+    "ignore": []
+  },
+  "setting": {
+    "urlCheck": false,
+    "es6": true,
+    "enhance": false,
+    "postcss": false,
+    "preloadBackgroundData": false,
+    "minified": false,
+    "newFeature": true,
+    "coverView": true,
+    "nodeModules": false,
+    "autoAudits": false,
+    "showShadowRootInWxmlPanel": false,
+    "scopeDataCheck": false,
+    "uglifyFileName": false,
+    "checkInvalidKey": true,
+    "checkSiteMap": true,
+    "uploadWithSourceMap": true,
+    "compileHotReLoad": false,
+    "babelSetting": {
+      "ignore": [],
+      "disablePlugins": [],
+      "outputPath": ""
+    },
+    "useIsolateContext": true,
+    "useCompilerModule": false,
+    "userConfirmedUseCompilerModuleSwitch": true,
+    "useMultiFrameRuntime": true,
+    "bundle": false,
+    "useApiHook": true,
+    "useApiHostProcess": true
+  },
+  "compileType": "miniprogram",
+  "libVersion": "2.12.2",
+  "appid": "wx56422cd818402e49",
+  "projectname": "wxapp",
+  "debugOptions": {
+    "hidedInDevtools": []
+  },
+  "isGameTourist": false,
+  "simulatorType": "wechat",
+  "simulatorPluginLibVersion": {},
+  "condition": {
+    "plugin": {
+      "list": []
+    },
+    "game": {
+      "list": []
+    },
+    "gamePlugin": {
+      "list": []
+    },
+    "miniprogram": {
+      "list": [
+        {
+          "id": -1,
+          "name": "pages/accountStatement/accountStatement",
+          "pathName": "pages/accountStatement/accountStatement",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "goodSearch",
+          "pathName": "pages/goodSearch/goodSearch",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": 2,
+          "name": "S",
+          "pathName": "pages/goodS/goodS",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "paymentRes",
+          "pathName": "pages/paymentRes/paymentRes",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "pages/goodSearch/goodSearch",
+          "pathName": "pages/goodSearch/goodSearch",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "pages/orderStatu/orderStatu",
+          "pathName": "pages/orderStatu/orderStatu",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "orderDetail",
+          "pathName": "pages/orderDetail/orderDetail",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "addPrint",
+          "pathName": "pages/addPrint/addPrint",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "pages/driverMap/driverMap",
+          "pathName": "pages/driverMap/driverMap",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "pages/recharge/recharge",
+          "pathName": "pages/recharge/recharge",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "pages/recharge/recharge",
+          "pathName": "pages/recharge/recharge",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "pages/login/login",
+          "pathName": "pages/rechargeDetail/rechargeDetail",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "pages/login/login",
+          "pathName": "pages/index/index",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "addPrint",
+          "pathName": "pages/addPrint/addPrint",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "pages/rechargeDetail/rechargeDetail",
+          "pathName": "pages/rechargeDetail/rechargeDetail",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": 15,
+          "name": "pages/bossRegister/readyRegister/readyRegister",
+          "pathName": "pages/bossRegister/readyRegister/readyRegister",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "pages/rechargePay/rechargePay",
+          "pathName": "pages/rechargePay/rechargePay",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/addPrint/addPrint",
+          "pathName": "pages/addPrint/addPrint",
+          "scene": null
+        }
+      ]
+    }
+  }
 }
